--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <script src="js/Models.js"></script>
 <script src="js/Views.js"></script>
 <script src="js/Collections.js"></script>
-<!-- <script src="js/Routers.js"></script> -->
+<script src="js/Routers.js"></script>
 
 
 <script>
